[package]
name = "kvs"
version = "0.1.0"
authors = ["Junxuan <njunxuan@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slog = "2.5.2"
slog-term = "2.4.1"
slog-async = "2.3.0"
sled = "0.29.1"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
crossbeam-utils = "0.6.5"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"

[[bench]]
name = "engine_comparison"
harness = false
